syntax = "proto3";

package vaas.ccv.consumer.v1;
import "vaas/ccv/v1/shared_consumer.proto";
option go_package = "github.com/allinbits/vaas/x/ccv/consumer/types";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

service Query {
  // QueryParams queries the ccv/consumer module parameters.
  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/vaas/ccv/consumer/params";
  }

  rpc QueryProviderInfo(QueryProviderInfoRequest) returns (QueryProviderInfoResponse) {
    option (google.api.http).get = "/vaas/ccv/consumer/provider-info";
  }
}

message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  vaas.ccv.v1.ConsumerParams params = 1 [ (gogoproto.nullable) = false ];
}

message QueryProviderInfoRequest {}

message QueryProviderInfoResponse {
  ChainInfo consumer = 1 [ (gogoproto.nullable) = false ];
  ChainInfo provider = 2 [ (gogoproto.nullable) = false ];
}

message ChainInfo {
  string chainID = 1;
  string clientID = 2;
  string connectionID = 3;
  string channelID = 4;
}
